@@ -1,3 +1,7 @@
+2011-06-22  Xavier Perseguers  <xavier@causal.ch>
+
+	* [BUGFIX] #27616: Kanton Bern - Confederation services don't show
+
 2011-06-20  Xavier Perseguers  <xavier@causal.ch>
 
 	* [FEATURE] #27577: Add hook to allow manual ordering of the providers
